[fix] fix ts warm and revise the introd make the last btn visible

--- a/src/assets/scss/CFP/intro.scss
+++ b/src/assets/scss/CFP/intro.scss
@@ -38,7 +38,7 @@ $fontColor: $mid-blue;
   }
 }
 .introduction {
-  height: 2300px;
+  height: 2400px;
   overflow: hidden;
   padding-bottom: 0;
 }
